--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-pure-render": "^1.0.2",
     "react-scripts": "1.0.13",
     "react-spinkit": "^3.0.0"
   },
