--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,10 @@ dependencies:
   post:
    - npm install
 
+test:
+  override:
+    - echo "Tests skipped."
+
 deployment:
   stage:
     branch: master
