--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,8 @@ machine:
 
 dependencies:
   pre:
+   - git config --global user.email "$GH_EMAIL"
+   - git config --global user.name "$GH_NAME"
    - git config --global push.default simple
   post:
    - npm install
