fix/ fixed build script

--- a/circle.yml
+++ b/circle.yml
@@ -24,7 +24,7 @@ deployment:
     commands:
       - npm run build
       - git clone --depth 1 git@github.com:Yankee-by/going.git
-      - cp -r ./build ./going
+      - cp -r ./build/. ./going/
       - cd ./going
       - git remote set-url origin git@github.com:Yankee-by/going.git
       - git add .
