fix/ finish work on ci config

--- a/circle.yml
+++ b/circle.yml
@@ -23,11 +23,10 @@ deployment:
     branch: master
     commands:
       - npm run build
-      - cd ..
       - git clone --depth 1 git@github.com:Yankee-by/going.git
-      - cp -r iduweb/build/. ./going/
+      - cp -r ./build/. ./going/
       - cd ./going
       - git remote set-url origin git@github.com:Yankee-by/going.git
       - git add .
       - git commit -m "CI build $CIRCLE_BUILD_NUM"
-      - git push --force
+      - git push
