fix/ added possibility to override main branch

--- a/circle.yml
+++ b/circle.yml
@@ -29,4 +29,4 @@ deployment:
       - git remote set-url origin git@github.com:Yankee-by/going.git
       - git add .
       - git commit -m "CI build $CIRCLE_BUILD_NUM"
-      - git push
+      - git push --force
